--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "packag.json-schema",
+  "name": "package.json-schema",
   "version": "0.1.0",
   "description": "JSON Schema for node/npm package.json",
   "keywords": [
