--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "bugs": {
     "url": "https://github.com/Bartvds/package.json-schema/issues"
   },
+  "main": "./vi/schema.json",
   "scripts": {
     "test": "node ./test/test.js"
   },
@@ -35,9 +36,8 @@
     "glob": "~3.2.8",
     "tv4": "~1.0.15",
     "bluebird": "~1.0.4",
-    "json-pointer": "~0.1.0",
     "ministyle": "~0.1.3",
-    "tv4-reporter": "0.0.3",
+    "tv4-reporter": "~0.0.3",
     "miniwrite": "~0.1.3"
   }
 }
